# A-Photo-Tool-Libre

./: .gitignore  CMakeLists.txt  INSTALL_APPIMAGE.md  INSTALL_ARCH.md  INSTALL_DEBIAN.md  INSTALL_FLATPAK.md  INSTALL_SNAP  INSTALL_SNAP.md  README  README.md
appimage/: AppImage-build-instructions.md
appimage/AppDir/: aphototoollibre.appdata.xml
appimage/AppDir/usr/share/applications/: aphototoollibre.desktop
appimage/AppDir/usr/share/metainfo/: aphototoollibre.appdata.xml
arch/: BKGBUILD  PKGBUILD
debian/: aphototoollibre.1  aphototoollibre.install  changelog  control  copyright  dirs  rules  watch
debian/source/: include-binaries
desktop/: aphototoollibre.desktop  aphototoollibre.metainfo.xml  me.ahola.aphototoollibre.desktop  me.ahola.aphototoollibre.metainfo.xml
desktop-std/: me.ahola.aphototoollibre.desktop  me.ahola.aphototoollibre.metainfo.xml
flatpak/: Flatpak-build-instructions.md  README.md  me.ahola.aphototoollibre.yml
flatpak/desktop/: me.ahola.aphototoollibre.appdata.xml
snap/: snapcraft.yaml
snap/gui/: aphototoollibre.desktop
src/: APhotoToolLibre.cpp  APhotoToolLibre_en_US.ts  README.txt  aphototoollibre.cpp  aphototoollibre.h  aphototoollibre.qrc  aphototoollibre.ui  constants.h  croptoolui.cpp  croptoolui.h  imagelabel.cpp  imagelabel.h  imagelabelpainter.cpp  imagelabelpainter.h  main.cpp  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  resizetoolui.cpp  resizetoolui.h  rotatetoolui.cpp  rotatetoolui.h  showimageevent.cpp  showimageevent.h  src.pro  values.cpp  values.h
src/fileio/: basefile.cpp  basefile.h  openfile.cpp  openfile.h  savefile.cpp  savefile.h
src/filters/: brightnessfilter.cpp  brightnessfilter.h  bwfilter.cpp  bwfilter.h  colortemperaturefilter.cpp  colortemperaturefilter.h  contrastfilter.cpp  contrastfilter.h  cropfilter.cpp  cropfilter.h  cropvalues.cpp  cropvalues.h  filters.cpp  filters.h  filtervalues.cpp  filtervalues.h  huefilter.cpp  huefilter.h  lightdarkfilter.cpp  lightdarkfilter.h  lightnessfilter.cpp  lightnessfilter.h  resizefilter.cpp  resizefilter.h  rotateanyanglefilter.cpp  rotateanyanglefilter.h  saturationfilter.cpp  saturationfilter.h  tintfilter.cpp  tintfilter.h
src/utils/: backgroundcontrol.cpp  backgroundcontrol.h  graphics.cpp  graphics.h  histogram.cpp  histogram.h  imagecreator.cpp  imagecreator.h  print.cpp  print.h  qpixmapversionedutils.cpp  qpixmapversionedutils.h  settingsutils.cpp  settingsutils.h  stylemode.cpp  stylemode.h  timeutil.cpp  timeutil.h
src/validators/: cropareavalidator.cpp  cropareavalidator.h
src/values/: imagevalues.cpp  imagevalues.h  usersettings.cpp  usersettings.h  usersettingvalues.cpp  usersettingvalues.h  workvalues.cpp  workvalues.h
